--- a/aboutMe.html
+++ b/aboutMe.html
@@ -9,10 +9,8 @@
 <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.7.0/css/mdb.min.css" rel="stylesheet">
  </head>
  
-  <style>
+ <style>
 @import url('https://fonts.googleapis.com/css?family=Oswald');
-@import url('https://fonts.googleapis.com/css?family=Open+Sans');
-
 
 .navbar-nav {
     float:none;
@@ -31,7 +29,7 @@
      
      <nav class="navbar navbar-expand-lg navbar-dark -color">
   <!-- Just an image -->
-<nav class="navbar navbar-dark transparent-color">
+<nav class="navbar navbar-dark transparent-color" style="box-shadow: none !important;">
   <a class="navbar-brand" href="#">
     <img src="https://bit.ly/2DJCEtL" height="40" alt="mdb logo">
   </a>
@@ -43,7 +41,7 @@
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
       <li class="nav-item active">
-        <a class="nav-link" href="./hello-world.html">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="./hello-world.html" style="background-color: #012044;">Home</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="./project.html">Projects</a>
@@ -57,13 +55,12 @@
     </ul>
   </div>
 </nav>
--- END OF NAVBAR -->
+<!-- END OF NAVBAR -->
      
   <div style="background-color: #bd1bbd; padding-top:10px; padding-bottom:10px;">
       <h1 style="color: white; text-align: center; font-family: 'Lato', sans-serif; font-weight: 600;
 "></a>ABOUT ME</h1>
   </div>
-
 
 
 <div class="container">
@@ -73,7 +70,8 @@
     display: block;" src="https://bit.ly/2RsZN7d"></img>
     </div>
     <div class="col" style="color: white; margin-top: 6%;">
-      <h1 style="color: white; font-family: 'Oswald', sans-serif;">Hey Everyone</h1>
+      <h1 style="color: white; text-align: center; font-family: 'Lato', sans-serif; font-weight: 600;
+">HEY EVERYONE!</h1>
       <p style="color: white; padding-top: 5%; font-family: 'Open Sans', sans-serif;
 ">I am Valerie . I'm excited to demonstrate my expertise on HTML, CSS, bootstrap and Javascript! My background has been as a licensed massage therapist.
 I've transitioned from massage therapy to coding.</p> 
@@ -83,8 +81,6 @@ I've transitioned from massage therapy to coding.</p>
 worthwhile for me!</p> </p> 
 
     </div>
-
-
 
 
 <!-- JQuery -->
