--- a/hello-world.html
+++ b/hello-world.html
@@ -14,6 +14,7 @@
 <!-- Material Design Bootstrap -->
 <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.7.0/css/mdb.min.css" rel="stylesheet">
 <link rel="stylesheet" href="style.css" type="text/css" />
+<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <body>
@@ -37,7 +38,7 @@
      
      <nav class="navbar navbar-expand-lg navbar-dark -color">
   <!-- Just an image -->
-<nav class="navbar navbar-dark transparent-color">
+<nav class="navbar navbar-dark transparent-color" style="box-shadow: none !important;">
   <a class="navbar-brand" href="#">
     <img src="https://bit.ly/2DJCEtL" height="40" alt="mdb logo">
   </a>
@@ -46,10 +47,10 @@
     aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-  <div class="collapse navbar-collapse" id="navbarNav">
+   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
       <li class="nav-item active">
-        <a class="nav-link" href="./hello-world.html">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="./hello-world.html" style="background-color: #012044;">Home</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="./project.html">Projects</a>
@@ -63,6 +64,7 @@
     </ul>
   </div>
 </nav>
+<
 <!-- END OF NAVBAR -->   
 
  <header class="header">
